tests/baselines/reference/untypedModuleImport_noImplicitAny_relativePath.errors.txt
/a.ts(1,22): error TS7016: Could not find a declaration file for module './node_modules/foo'. '/node_modules/foo/index.js' implicitly has an 'any' type.


==== /a.ts (1 errors) ====
    import * as foo from "./node_modules/foo";
                         ~~~~~~~~~~~~~~~~~~~~
!!! error TS7016: Could not find a declaration file for module './node_modules/foo'. '/node_modules/foo/index.js' implicitly has an 'any' type.
    
==== /node_modules/foo/package.json (0 errors) ====
    { "name": "foo", "version": "1.2.3" }
    
==== /node_modules/foo/index.js (0 errors) ====
    This file is not processed.
    